template/agenda.css
@font-face {
    font-family: "myfont";
    src: local("JaneAusten");
}

* {
    box-sizing: border-box;
    font: TEXT_SIZE "myfont";
    color: purple;
}

h1 {
    font-size: TITLE_SIZE;
}

page {
    width: 21cm;
    height: 29.7cm;
    background: white;
    display: block;
}

page[side=left] {
    padding: MARGIN_TOP MARGIN_INNER MARGIN_BOT MARGIN_OUTER;
}

page[side=right] {
    padding: MARGIN_TOP MARGIN_OUTER MARGIN_BOT MARGIN_INNER;
}

.grid {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-areas:
        "title box"
        "cell_11 cell_12"
        "cell_21 cell_22"
        "cell_31 cell_32";
    grid-template-columns: 50% 50%;
    grid-template-rows: 25% 25% 25% 25%;
}

.collumn-title {
    display: table;
    margin: -9% auto 0 auto;
    padding: 0 2% 0 2%;
    background-color: white;
}

.title {
    grid-area: title;
    margin: SPACE_TITLE_TOP SPACE_TITLE_LEFT;
}

.box {
    grid-area: box;
    padding: 3% 3%;
    border: LINE_SIZE solid;
    margin: SPACE_BOX_TOP SPACE_BOX_RIGHT SPACE_BOX_BOT SPACE_BOX_LEFT;
}

.cell_11 {
    grid-area: cell_11;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none solid none;
}

.cell_12 {
    grid-area: cell_12;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none solid dashed;
    margin: 0 0 0 0;
}

.cell_21 {
    grid-area: cell_21;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none solid none;
    margin: -LINE_SIZE 0 0 0;
}

.cell_22 {
    grid-area: cell_22;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none solid dashed;
    margin: -LINE_SIZE 0 0 0;
}

.cell_31 {
    grid-area: cell_31;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none none none;
    margin: -LINE_SIZE 0 0 0;
}

.cell_32 {
    grid-area: cell_32;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none none dashed;
    margin: -LINE_SIZE 0 0 0;
}

.cell_32_solidleft {
    grid-area: cell_32;
    padding: 3% 3%;
    border: LINE_SIZE;
    border-style: solid none none solid;
    margin: -LINE_SIZE 0 0 0;
}

